// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render with primary and secondary buttons 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(-360deg);
    -moz-transform: rotate(-360deg);
    -ms-transform: rotate(-360deg);
    transform: rotate(-360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  gap: 0.75rem;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  overflow: hidden;
  vertical-align: bottom;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: var(--echoes-dimension-height-400);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.emotion-6 {
  border: 2px solid transparent;
  background: var(
      --spinner-background,
      linear-gradient(0deg, var(--echoes-color-background-accent-default) 50%, transparent 50% 100%)
        border-box,
      linear-gradient(90deg, var(--echoes-color-background-accent-default) 25%, transparent 75% 100%)
        border-box
    );
  -webkit-mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  -webkit-mask-composite: exclude;
  mask-composite: exclude;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  display: inline-block;
  box-sizing: border-box;
  height: var(--echoes-dimension-height-400);
  width: var(--echoes-dimension-width-200);
  border-radius: var(--echoes-border-radius-full);
  vertical-align: text-bottom;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--echoes-dimension-space-100);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <output
        aria-live="polite"
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        />
      </output>
    </span>
    <span
      class="emotion-8 emotion-9"
    >
      <button
        type="button"
      >
        Primary
      </button>
      <button
        type="reset"
      >
        Reset
      </button>
    </span>
  </div>
  <section
    aria-atomic="false"
    aria-label="toasts.keyboard_shortcut_aria_label alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    tabindex="-1"
  />
</div>
`;

exports[`should render with secondary button 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(-360deg);
    -moz-transform: rotate(-360deg);
    -ms-transform: rotate(-360deg);
    transform: rotate(-360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  gap: 0.75rem;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  overflow: hidden;
  vertical-align: bottom;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: var(--echoes-dimension-height-400);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.emotion-6 {
  border: 2px solid transparent;
  background: var(
      --spinner-background,
      linear-gradient(0deg, var(--echoes-color-background-accent-default) 50%, transparent 50% 100%)
        border-box,
      linear-gradient(90deg, var(--echoes-color-background-accent-default) 25%, transparent 75% 100%)
        border-box
    );
  -webkit-mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  -webkit-mask-composite: exclude;
  mask-composite: exclude;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  display: inline-block;
  box-sizing: border-box;
  height: var(--echoes-dimension-height-400);
  width: var(--echoes-dimension-width-200);
  border-radius: var(--echoes-border-radius-full);
  vertical-align: text-bottom;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--echoes-dimension-space-100);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
    >
      <output
        aria-live="polite"
        class="emotion-4 emotion-5"
      >
        <span
          class="emotion-6 emotion-7"
        />
      </output>
    </span>
    <span
      class="emotion-8 emotion-9"
    >
      <button
        type="button"
      >
        Close
      </button>
    </span>
  </div>
  <section
    aria-atomic="false"
    aria-label="toasts.keyboard_shortcut_aria_label alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    tabindex="-1"
  />
</div>
`;
